Adicionando logs nas classes service